--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Welcome to My Website</title>
+    <title>NBA Playoff Analysis</title>
 </head>
 
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 class='title'>NBA Playoff Analysis</h1>
+        <nav>
+            <button onclick="location.href='index.html'">Home</button>
+            <button onclick="location.href='interactive.html'">Interactive Plots</button>
+            <button onclick="location.href='static.html'">Static Plots</button>
+        </nav>
     </header>
     <main>
+        <h3>
+            This is a project that analyzes the NBA playoffs from the past 10 years.
+        </h3>
     </main>
 </body>
 
