created chart container and styling

--- a/interactive.html
+++ b/interactive.html
@@ -19,7 +19,9 @@
         </nav>
     </header>
     <main>
+        <div class="chart-container">
         <embed type="text/html" src="plot.html" width="1000" height="1000" class="card">
+        </div>
     </main>
 </body>
 
