Updated title of chart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h3>
-            This is a project that analyzes the NBA playoffs from the past 10 years.
+            This is a project that analyzes the NBA playoffs from the 2012 season to 2023 season.
         </h3>
     </main>
 </body>
