--- a/interactive.html
+++ b/interactive.html
@@ -20,6 +20,9 @@
     </header>
     <main>
         <div class="chart-container">
+            <h3>
+                Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
+            </h3>
         <embed type="text/html" src="plot.html" width="1000" height="1000" class="card">
         </div>
     </main>
