Added interactive map and assist to turnover static plot

--- a/static.html
+++ b/static.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class='title'>Interactive Plots</h1>
+        <h1 class='title'>Static Plots</h1>
         <nav>
             <button onclick="location.href='index.html'">Home</button>
             <button onclick="location.href='interactive.html'">Interactive Plots</button>
@@ -21,15 +21,15 @@
     <main>
         <div class="chart-container">
             <h3>
-                Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
+                Top 30 Players in the Playoffs with the Most Minutes Played
             </h3>
-        <embed type="text/html" src="charts/plot.html" width="1000" height="1000" class="card">
+        <embed type="text/html" src="charts/top_30_playoff_minutes.html" width="900" height="600" class="card">
         </div>
         <div class="chart-container">
             <h3>
-                NBA Championships Won by Each Team
+                Assist to Turnover Ratio of the Top 20 Highest Scoring Players
             </h3>
-        <embed type="text/html" src="Interactive map/nba_championships_map.html" width="1000" height="1000" class="card">
+        <img src="charts/Assist to Turnover.png" width="900" height="600" class="card">
         </div>
     </main>
 </body>
