Added 3pt chart to website

--- a/static.html
+++ b/static.html
@@ -31,6 +31,12 @@
             </h3>
         <img src="charts/Assist to Turnover.png" width="900" height="600" class="card">
         </div>
+        <div class="chart-container">
+            <h3>
+                Top 30 Players in the Playoffs with the Most Minutes Played
+            </h3>
+        <embed type="text/html" src="charts/3pt.html" width="900" height="600" class="card">
+        </div>
     </main>
 </body>
 
