--- a/charts/3pt.html
+++ b/charts/3pt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,22 @@
         .bar {
             fill: steelblue;
         }
+
         .axis-label {
             font: 12px sans-serif;
         }
     </style>
 </head>
+
 <body>
-    <h2>3-Point Field Goals per Game - Latest Playoff Season</h2>
+    <h3>3-Point Field Goals per Game - Latest Playoff Season</h3>
     <div id="chart"></div>
 
     <!-- D3.js library -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script>
-        // Load the data from CSV (adjust path as needed)
-        d3.csv("Playoffs.csv").then(function(data) {
+        // Load the data from CSV
+        d3.csv("../data/Playoffs.csv").then(function (data) {
             // Prepare the data by calculating 3PT per game
             data.forEach(d => {
                 d["3PT_PG"] = +d.FG3M / +d.GP;  // Calculating 3-point field goals per game
@@ -32,8 +35,8 @@
 
             // Set up chart dimensions
             const margin = { top: 20, right: 30, bottom: 60, left: 150 },
-                  width = 800 - margin.left - margin.right,
-                  height = 600 - margin.top - margin.bottom;
+                width = 800 - margin.left - margin.right,
+                height = 600 - margin.top - margin.bottom;
 
             // Create SVG element
             const svg = d3.select("#chart")
@@ -82,16 +85,18 @@
                 .text("3-Point Field Goals per Game");
         });
     </script>
-     <p class="analysis"></p>
-        This chart shows the players who made the most 3-point field goals per game in the latest playoffs. 
-        It depicts newer talents and veteran players. Players like Curry, Harden, and Lillard stand out because 
-        of their reputations as sharp 3-point shooters and their key roles for their teams. They also have more 
-        experience in the playoffs and more chances to take 3’s during playoff games. The chart showcases newer 
-        talents such as Donovan Mitchell. Although Mitchell has been in the NBA for less time compared to other 
-        names, he leads in the number of 3s per playoff games. In addition to showing the players who made the 
-        most 3’s in playoff games, the chart highlights the gap between elite shooters like Curry, who is 
-        renowned for his deep shooting range and high volume, and other skilled shooters who still contribute 
+
+    <p class="analysis">
+        This chart shows the players who made the most 3-point field goals per game in the latest playoffs.
+        It depicts newer talents and veteran players. Players like Curry, Harden, and Lillard stand out because
+        of their reputations as sharp 3-point shooters and their key roles for their teams. They also have more
+        experience in the playoffs and more chances to take 3’s during playoff games. The chart showcases newer
+        talents such as Donovan Mitchell. Although Mitchell has been in the NBA for less time compared to other
+        names, he leads in the number of 3s per playoff games. In addition to showing the players who made the
+        most 3’s in playoff games, the chart highlights the gap between elite shooters like Curry, who is
+        renowned for his deep shooting range and high volume, and other skilled shooters who still contribute
         significantly but at a lower frequency and indicates a strategic emphasis on how 3s are shot.
     </p>
 </body>
+
 </html>
