fixed the animation for loading and organized the scripting file

--- a/subpages/static.html
+++ b/subpages/static.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <script src="../scripts/logic.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,19 +24,19 @@
             <h2>
                 Top 30 Players in the Playoffs with the Most Minutes Played
             </h2>
-        <embed type="text/html" src="../charts/top_30_playoff_minutes.html" width="1000" height="550" class="card">
+            <embed type="text/html" src="../charts/top_30_playoff_minutes.html" width="1000" height="550" class="card">
         </div>
         <div class="chart-container">
             <h2>
                 Assist to Turnover Ratio of the Top 20 Highest Scoring Players
             </h2>
-        <img src="../charts/Assist to Turnover.png" width="1000" height="600" class="card">
+            <img src="../charts/Assist to Turnover.png" width="1000" height="600" class="card">
         </div>
         <div class="chart-container">
             <h2>
                 3-Point Field Goals per Game - Latest Playoff Season
             </h2>
-        <embed type="text/html" src="../charts/3pt.html" width="1000" height="750" class="card">
+            <embed type="text/html" src="../charts/3pt.html" width="1000" height="750" class="card">
             <p class="card">
                 This chart shows the players who made the most 3-point field goals per game in the latest playoffs.
                 It depicts newer talents and veteran players. Players like Curry, Harden, and Lillard stand out because
