--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <script src="../scripts/interactive.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,14 +23,6 @@
         <div class="loading-bar-container" id="loading-bar-container">
             <div id="loading-indicator" class="loading-bar"></div>
         </div>
-
-        <script>
-            window.addEventListener("load", function () {
-                // Hide loading bar once page is fully loaded
-                document.getElementById("loading-indicator").style.display = "none";
-                document.getElementById("loading-bar-container").style.display = "none";
-            });
-        </script>
         <div class="chart-container">
             <h2>
                 Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
