--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>NBA Playoff Analysis</title>
+    <link rel="icon" href="logo/NBA Logo Transparent.png" type="image/x-icon">
 </head>
 
 <body>
