added siowa's information

--- a/index.html
+++ b/index.html
@@ -19,9 +19,72 @@
         </nav>
     </header>
     <main>
-        <h3>
-            This is a project that analyzes the NBA playoffs from the 2012 season to 2023 season.
-        </h3>
+        <div style="display: flex;
+            flex-direction: column;
+            align-items: center;">
+            <h2>
+                About Our Main Dataset
+            </h2>
+            <div class="card">
+                <p>
+                    The data we are using is the NBA playoff data. The data source is reliable because all data are
+                    collected from the official website, which brings up credibility. It doesn’t contain any player's
+                    personal information like contact and address therefore, it doesn’t violate the privacy problem.
+                    This
+                    data represents the player’s performance in different playoffs with all their stats. The data has
+                    2,576
+                    rows with 30 columns. Most columns are made up of different statistics, which are valuable in
+                    evaluating
+                    a player’s performance. Metrics like field goals made and offensive rebounds allow us to analyze a
+                    player’s abilities from multiple perspectives. In addition, we also have the year of the playoff
+                    season,
+                    team, and player, as well as a rank we can use to analyze this data. This data is sourced from
+                    Kaggle
+                    and represents NBA data in the past decade. The following will be a link to the dataset and column
+                    information.
+                </p>
+                <a
+                    href="https://www.kaggle.com/datasets/shivamkumar121215/nba-stats-dataset-for-last-10-years?select=Playoffs.csv">NBA
+                    Players Data</a>
+            </div>
+            <h2>
+                About Our Supplemental Datasets
+            </h2>
+            <div class="card">
+                <h3>
+                    Championship Data
+                </h3>
+                <p>
+                    The data is used as a sub-dataset, which is collected from Statista. The data source is from the
+                    NBA
+                    official website which brings up the credibility of the data accuracy. It doesn’t contain any
+                    player
+                    personal information like contact and address therefore it doesn’t violate the privacy problem.
+                    The data
+                    contains 3 columns and 22 rows, and it is in xlsx format. The championship data includes
+                    information
+                    about the championship that each team has won, the home city of each team, and the team that won
+                    the
+                    championship. We plan to make a map to better visualize the championship for each team.
+                </p>
+                <a href="https://www.statista.com/statistics/1178771/nba-championships-team/">NBA
+                    Championship Data</a>
+            </div>
+            <div class="card">
+                <h3>
+                    Geographic Data
+                </h3>
+                <p>
+                    The geographic data for United States Cities are from SimpleMaps. The data is built up using
+                    authorized sources such as the US Census Bureau, US Geological Survey, and USGS. These are all
+                    government-authorized sources, and this has made the data reliable. Instead of in shp file, the data
+                    is in csv and it is in the format of longitude and latitude which can help locate the most accurate
+                    location for the home city location among each team.
+                </p>
+                <a href="https://simplemaps.com/data/us-cities">NBA
+                    Championship Data</a>
+            </div>
+        </div>
     </main>
 </body>
 
