added mine and jasmine's chart explanation

--- a/subpages/static.html
+++ b/subpages/static.html
@@ -25,12 +25,34 @@
                 Top 30 Players in the Playoffs with the Most Minutes Played
             </h2>
             <embed type="text/html" src="../charts/top_30_playoff_minutes.html" width="1000" height="550" class="card">
+            <p class="card">
+                This chart shows the 30 players that have the most playoff minutes. It shows Lebron leading by a
+                substantial amount. This makes sense because Lebron played for many championship teams, which increases
+                his minutes. Lebron is also a star player and arguably one of the best players to ever play the game.
+                Players like Draymond Green, Durant, Kawhi and Stephen Curry have high playoff minutes, which is a
+                reflection of their experience and the success of their teams. Winning more playoff games, gives them
+                more chances to play and increase their playing time. These players have lots of experience in the
+                playoffs and have deep runs and often reach the finals. This chart has young players who are on the rise
+                and are gaining more playoff experience. An example is Jayson Tatum. Although he is relatively young, he
+                plays a key role in the Celtic's playoff success and is trusted with heavy playoff minutes
+            </p>
         </div>
         <div class="chart-container">
             <h2>
                 Assist to Turnover Ratio of the Top 20 Highest Scoring Players
             </h2>
             <img src="../charts/Assist to Turnover.png" width="1000" height="600" class="card">
+            <p class="card">
+
+                This bar chart displays the assist-to-turnover ratio of the top 20 highest-scoring players, showcasing
+                how effectively they manage ball distribution relative to turnovers. Chris Paul leads significantly with
+                the highest assist-to-turnover ratio, emphasizing his exceptional playmaking and efficiency in ball
+                handling. Al Horford, Jimmy Butler, and Kyle Lowry also stand out with strong ratios, highlighting their
+                ability to maintain possession and create opportunities. On the other end, players like Jaylen Brown and
+                Klay Thompson rank lower, indicating a focus on scoring rather than playmaking or higher turnover rates
+                relative to their assists. Overall, the chart illustrates varying playmaking efficiencies among these
+                top scorers, with notable differences in their roles and styles of play.
+            </p>
         </div>
         <div class="chart-container">
             <h2>
