added topic intro

--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
             flex-direction: column;
             align-items: center;">
             <h2>
+                Topic Introduction:
+            </h2>
+            <div class="card">
+                <p>
+                    The factors influencing performance and success in NBA teams are multifaceted, blending individual
+                    player metrics with overall team dynamics. This complexity makes it a fascinating area for data
+                    science research. By analyzing how variables like points scored, playing time, assists, and rebounds
+                    contribute to both player and team success, we can uncover valuable insights into strategies that
+                    drive championship victories. This research goes beyond identifying standout players—it explores how
+                    their performances align with team outcomes, shedding light on the key differentiators of
+                    championship-winning teams. Through the analysis of historical data and visualization of trends and
+                    correlations, this study aims to identify patterns that can provide valuable lessons for coaches,
+                    analysts, and basketball enthusiasts alike. Ultimately, this research will deepen our understanding
+                    of what drives success in professional basketball, offering strategic insights for future decisions
+                    in team building and game planning.
+                </p>
+            </div>
+            <h2>
                 About Our Main Dataset
             </h2>
             <div class="card">
