added future findings

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button onclick="location.href='index.html'">Home</button>
             <button onclick="location.href='subpages/interactive.html'">Interactive Plots</button>
             <button onclick="location.href='subpages/static.html'">Static Plots</button>
+            <button onclick="location.href='subpages/future.html'">Future Findings</button>
         </nav>
     </header>
     <main>
