--- a/subpages/static.html
+++ b/subpages/static.html
@@ -17,6 +17,7 @@
             <button onclick="location.href='../index.html'">Home</button>
             <button onclick="location.href='interactive.html'">Interactive Plots</button>
             <button onclick="location.href='static.html'">Static Plots</button>
+            <button onclick="location.href='future.html'">Future Findings</button>
         </nav>
     </header>
     <main>
