updated grammar on one future finding

--- a/subpages/future.html
+++ b/subpages/future.html
@@ -68,9 +68,9 @@
             <div class="card">
                 <h4>Integrating Fan Engagement Metrics</h4>
                 <ul>
-                    <li>Analyze how fan engagement-such as social media traffic, attendance at games, and
-                        merchandising-sales relates to team performance and championship victories as an indirect
-                        indicator of the value of community support for the success of a team</li>
+                    <li>Analyze how fan engagement—such as social media activity, game attendance, and merchandise
+                        sales—relates to team performance and championship victories, serving as an indirect indicator
+                        of the value of community support for a team's success</li>
                 </ul>
             </div>
         </div>
