--- a/subpages/static.html
+++ b/subpages/static.html
@@ -59,7 +59,7 @@
             <h2>
                 3-Point Field Goals per Game - Latest Playoff Season
             </h2>
-            <embed type="text/html" src="../charts/3pt.html" width="1000" height="750" class="card">
+            <embed type="text/html" src="../Static Plots Code/3pt.html" width="1000" height="750" class="card">
             <p class="card">
                 This chart shows the players who made the most 3-point field goals per game in the latest playoffs.
                 It depicts newer talents and veteran players. Players like Curry, Harden, and Lillard stand out because
