--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -26,50 +26,9 @@
         </div>
         <div class="chart-container">
             <h2>
-                Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
-            </h2>
-            <embed type="text/html" src="../charts/plot.html" width="1000" height="700" class="card">
-        </div>
-        <div style="display: flex;
-        flex-direction: column;
-        align-items: center;">
-            <h3>
-                How to Interact with the Plot
-            </h3>
-            <p class="card">
-                This interactive scatter plot shows points scored (PTS) by each NBA player along with number of assists
-                (AST) and rebounds (REB) across seasons from 2012-13 to 2023-24. Each. player will have three different
-                markers, representing each metric in detail. This plot can be interacted with by clicking on the name of
-                the desired player through the legend, which isolates data for that specific player and removes the
-                other players from the graph. This allows focused analysis of one player's performance against others
-                across seasons. Moreover, users can click their names to add multiple players back onto the graph to
-                compare player performances. This interaction helps analyze any trends or performance differences
-                between players over various seasons.
-            <h3>
-                Analysis of the Player Performance Comparison Interactive Plot
-            </h3>
-            <p class="card">
-                The interactive plot allows us to see the key insights into player performance trends and their
-                contributions to team success. The individual strengths are shown as a dispersion among the metrics,
-                which shows the difference in the roles of players. A player like LeBron James may come off as one of
-                the best in all three features which are PTS, AST, REB consistently. However, other players, for
-                example, Kevin Durant, might just be one of the top players in scoring but the plot shows how he may
-                comparatively have less assists or rebounds. In addition, it shows seasonal patterns, such as decreases
-                consistency, or peak years, which can be useful in tracking how players change over time. In this way,
-                people can evaluate a player's long-term value to their team or compare exceptional seasons. The plot
-                also emphasizes how teams strategically depend on certain players for specific functions, such as
-                rebounding, assisting, or scoring. If a player is balanced and has contributions to all three metrics,
-                it could suggest a player's more diversified role on the team. However, if a player has consistent high
-                scoring, it could suggest that he is the team's anchor, based around his offence. For analysts, coaches,
-                and fans, the analysis that follows links these specific performances to more comprehensive strategies
-                and achievements.
-            </p>
-        </div>
-        <div class="chart-container">
-            <h2>
                 NBA Championships Won by Each Team
             </h2>
-            <embed type="text/html" src="../Interactive map/nba_championships_map.html" width="1000" height="700"
+            <embed type="text/html" src="../Interactive Map Code/nba_championships_map.html" width="1000" height="700"
                 class="card">
         </div>
         <div style="display: flex;
@@ -123,6 +82,47 @@
                 teams
                 that likely to win future championships based on historical and current performance metrics.
 
+            </p>
+        </div>
+        <div class="chart-container">
+            <h2>
+                Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
+            </h2>
+            <embed type="text/html" src="../charts/plot.html" width="1000" height="700" class="card">
+        </div>
+        <div style="display: flex;
+        flex-direction: column;
+        align-items: center;">
+            <h3>
+                How to Interact with the Plot
+            </h3>
+            <p class="card">
+                This interactive scatter plot shows points scored (PTS) by each NBA player along with number of assists
+                (AST) and rebounds (REB) across seasons from 2012-13 to 2023-24. Each. player will have three different
+                markers, representing each metric in detail. This plot can be interacted with by clicking on the name of
+                the desired player through the legend, which isolates data for that specific player and removes the
+                other players from the graph. This allows focused analysis of one player's performance against others
+                across seasons. Moreover, users can click their names to add multiple players back onto the graph to
+                compare player performances. This interaction helps analyze any trends or performance differences
+                between players over various seasons.
+            <h3>
+                Analysis of the Player Performance Comparison Interactive Plot
+            </h3>
+            <p class="card">
+                The interactive plot allows us to see the key insights into player performance trends and their
+                contributions to team success. The individual strengths are shown as a dispersion among the metrics,
+                which shows the difference in the roles of players. A player like LeBron James may come off as one of
+                the best in all three features which are PTS, AST, REB consistently. However, other players, for
+                example, Kevin Durant, might just be one of the top players in scoring but the plot shows how he may
+                comparatively have less assists or rebounds. In addition, it shows seasonal patterns, such as decreases
+                consistency, or peak years, which can be useful in tracking how players change over time. In this way,
+                people can evaluate a player's long-term value to their team or compare exceptional seasons. The plot
+                also emphasizes how teams strategically depend on certain players for specific functions, such as
+                rebounding, assisting, or scoring. If a player is balanced and has contributions to all three metrics,
+                it could suggest a player's more diversified role on the team. However, if a player has consistent high
+                scoring, it could suggest that he is the team's anchor, based around his offence. For analysts, coaches,
+                and fans, the analysis that follows links these specific performances to more comprehensive strategies
+                and achievements.
             </p>
         </div>
     </main>
