feat: add 3-point shooting evolution section with analysis and update chart height

--- a/subpages/static.html
+++ b/subpages/static.html
@@ -25,7 +25,7 @@
             <h2>
                 Top 30 Players in the Playoffs with the Most Minutes Played
             </h2>
-            <embed type="text/html" src="../charts/top_30_playoff_minutes.html" width="1000" height="550" class="card">
+            <embed type="text/html" src="../charts/top_30_playoff_minutes.html" width="1000" height="650" class="card">
             <p class="card">
                 This chart shows the 30 players that have the most playoff minutes. It shows Lebron leading by a
                 substantial amount. This makes sense because Lebron played for many championship teams, which increases
@@ -53,6 +53,24 @@
                 Klay Thompson rank lower, indicating a focus on scoring rather than playmaking or higher turnover rates
                 relative to their assists. Overall, the chart illustrates varying playmaking efficiencies among these
                 top scorers, with notable differences in their roles and styles of play.
+            </p>
+        </div>
+        <div class="chart-container">
+            <h2>
+                3-Point Shooting Evolution in the Playoffs
+            </h2>
+            <embed type="text/html" src="../Static Plots Code/3 Point made history/nba_playoff_3pt_trend.png"
+                width="1000" height="750" class="card">
+            <p class="card">
+                Some key observation our team found is there is a significant increase for 3 point attempts per game in
+                play-off from 2.0 in 12-13 season to 3.2 for 23-24 season. 3 point made per game is also increase by 68%
+                within the past 12 seasons. The rise of 3-point statistics showing a shift in gameplay strategies over
+                time. Player are adapting 3-point shooting as a primary score method instead of what they did in the
+                past (near basket and pull up jumpers). This has also changed the team dynamic of the transformation of
+                defensive strategies, spacing on the court, and player roles, emphasizing shooters and perimeter play.
+                Due to this transformation, the 3 point percentage is likely to be slightly higher, but the trend may be
+                remaining a stable increase because there are all kind of different defense approach has been change to
+                adapt the transformation of scoring technique.
             </p>
         </div>
         <div class="chart-container">
