fix: update link text for geographic data reference

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                     is in csv and it is in the format of longitude and latitude which can help locate the most accurate
                     location for the home city location among each team.
                 </p>
-                <a href="https://simplemaps.com/data/us-cities">NBA
-                    Championship Data</a>
+                <a href="https://simplemaps.com/data/us-cities">Geographic Data</a>
             </div>
         </div>
     </main>
