feat: update assist-to-turnover chart and description to reflect team performance and championship correlation

--- a/subpages/static.html
+++ b/subpages/static.html
@@ -42,17 +42,17 @@
             <h2>
                 Assist to Turnover Ratio of the Top 20 Highest Scoring Players
             </h2>
-            <img src="../charts/Assist to Turnover.png" width="1000" height="600" class="card">
+            <img src="../charts/assist to turnover team.png" width="1000" height="600" class="card">
             <p class="card">
-
-                This bar chart displays the assist-to-turnover ratio of the top 20 highest-scoring players, showcasing
-                how effectively they manage ball distribution relative to turnovers. Chris Paul leads significantly with
-                the highest assist-to-turnover ratio, emphasizing his exceptional playmaking and efficiency in ball
-                handling. Al Horford, Jimmy Butler, and Kyle Lowry also stand out with strong ratios, highlighting their
-                ability to maintain possession and create opportunities. On the other end, players like Jaylen Brown and
-                Klay Thompson rank lower, indicating a focus on scoring rather than playmaking or higher turnover rates
-                relative to their assists. Overall, the chart illustrates varying playmaking efficiencies among these
-                top scorers, with notable differences in their roles and styles of play.
+                The chart illustrates the relationship between NBA teams' Assist to Turnover Ratios (ATR) and their
+                historical championship wins. The Boston Celtics and Los Angeles Lakers lead with 18 and 17
+                championships, respectively, despite having moderate ATRs, showing that factors beyond ATR contribute
+                significantly to success. Teams like the Timberwolves, Suns, and Clippers have high ATRs but no
+                championships, indicating that efficiency in assists relative to turnovers alone does not guarantee
+                titles. On the other hand, teams like the Bulls (6 championships) and Warriors (7 championships) have
+                found success with balanced ATRs, reflecting a broader strategic approach. The chart highlights that
+                while a strong ATR can signal effective teamwork and ball handling, it is only one component of the
+                complex formula for achieving championships in the NBA.
             </p>
         </div>
         <div class="chart-container">
