refactor: update button labels for navigation to improve clarity and consistency

--- a/subpages/static.html
+++ b/subpages/static.html
@@ -15,8 +15,8 @@
         <h1 class='title'>Static Plots</h1>
         <nav>
             <button onclick="location.href='../index.html'">Home</button>
-            <button onclick="location.href='interactive.html'">Interactive Plots</button>
-            <button onclick="location.href='static.html'">Static Plots</button>
+            <button onclick="location.href='interactive.html'">Overview</button>
+            <button onclick="location.href='static.html'">Deeper Analysis</button>
             <button onclick="location.href='future.html'">Future Findings</button>
         </nav>
     </header>
