--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 class='title'>NBA Playoff Analysis</h1>
         <nav>
             <button onclick="location.href='index.html'">Home</button>
-            <button onclick="location.href='subpages/interactive.html'">Interactive Plots</button>
-            <button onclick="location.href='subpages/static.html'">Static Plots</button>
+            <button onclick="location.href='subpages/interactive.html'">Overview</button>
+            <button onclick="location.href='subpages/static.html'">Deeper Analysis</button>
             <button onclick="location.href='subpages/future.html'">Future Findings</button>
         </nav>
     </header>
