refactor: update page titles for clarity and enhance chart descriptions for better analysis

--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 class='title'>Interactive Plots</h1>
+        <h1 class='title'>Overview</h1>
         <nav>
             <button onclick="location.href='../index.html'">Home</button>
             <button onclick="location.href='interactive.html'">Overview</button>
@@ -123,6 +123,24 @@
                 scoring, it could suggest that he is the team's anchor, based around his offence. For analysts, coaches,
                 and fans, the analysis that follows links these specific performances to more comprehensive strategies
                 and achievements.
+            </p>
+        </div>
+        <div class="chart-container">
+            <h2>
+                3-Point Shooting Evolution in the Playoffs
+            </h2>
+            <embed type="text/html" src="../Static Plots Code/3 Point made history/nba_playoff_3pt_trend.png"
+                width="1000" height="800" class="card">
+            <p class="card">
+                Some key observation our team found is there is a significant increase for 3 point attempts per game in
+                play-off from 2.0 in 12-13 season to 3.2 for 23-24 season. 3 point made per game is also increase by 68%
+                within the past 12 seasons. The rise of 3-point statistics showing a shift in gameplay strategies over
+                time. Player are adapting 3-point shooting as a primary score method instead of what they did in the
+                past (near basket and pull up jumpers). This has also changed the team dynamic of the transformation of
+                defensive strategies, spacing on the court, and player roles, emphasizing shooters and perimeter play.
+                Due to this transformation, the 3 point percentage is likely to be slightly higher, but the trend may be
+                remaining a stable increase because there are all kind of different defense approach has been change to
+                adapt the transformation of scoring technique.
             </p>
         </div>
     </main>
