refactor: improve text clarity and formatting in index and interactive pages

--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -39,49 +39,33 @@
             </h3>
             <p class="card">
                 We created an interactive map to visualize the championship status for each team across various cities
-                in
-                the United States. For each city, we set the mark to a circle, and it is an interactive feature. By
-                clicking
-                on the marker, a pop-up will display detailed information about the city, team name, and the exact
-                number of
-                championships that the team has won. The markers are color-coded and have different sizes to show
-                different
-                championship counts. This feature will provide a quick visual reference for the audience before
-                selecting
-                any marks they are interested in. Additionally, the map could be zoomed in or out using the control
-                button
-                or by scrolling. This feature helps the audience to better explore a specific region or view the map
-                from a
-                broader perspective.
-                significantly but at a lower frequency and indicates a strategic emphasis on how 3s are shot.
+                in the United States. For each city, we set the mark to a circle, and it is an interactive feature. By
+                clicking on the mark (circle), a pop-up text will display detailed information about the city, team
+                name, and the exact number of championships that the team has won. The markers are color-coded and have
+                different sizes to show different championship counts. This feature will provide a quick visual
+                reference for the audience before selecting any marks they are interested in. Additionally, the map
+                could be zoomed in or out using the control button or by scrolling. This feature helps the audience to
+                better explore a specific region or view the map from a broader perspective.
             </p>
             <h3>
                 Analysis of the NBA Championships Interactive Map
             </h3>
             <p class="card">
                 The NBA Championships Interactive map shows a big picture of the geographic distribution of
-                championships
-                between 1964 and 2024. Major cities such as Boston and Los Angeles lead the map with the most
-                championships,
-                showing the historical success of teams like the Celtics and Lakers. This observation shows the team
-                that
-                has won more titles is likely to have strong management, consistent player development, and market size
-                that
-                may have contributed to their success in these teams. Meanwhile, some teams, such as Phoenix and
-                Brooklyn,
-                haven’t won a championship yet, showing a situation of disparities in team performance over time. This
-                map
-                provides valuable historical evidence of the competitive landscape for each team in the NBA history.
+                championships between 1964 and 2024. Major cities such as Boston and Los Angeles lead the map with the
+                most championships, showing the historical success of teams like the Celtics and Lakers. This
+                observation shows the team that has won more titles is likely to have strong management, consistent
+                player development, and market size that may have contributed to their success in these teams.
+                Meanwhile, some teams, such as Phoenix and Brooklyn, haven’t won a championship yet, showing a situation
+                of disparities in team performance over time. This map provides valuable historical evidence of the
+                competitive landscape for each team in the NBA history.
                 In the future, we could enhance this analysis to show more in-depth features with the map to bring a
-                better
-                landscape to the audience. We could do this by incorporating additional data such as team performance
-                trends, player contribution, or economic impact on the cities. We can add more interactive features like
-                time-lapse to display how championship distribution has evolved over the years to provide a more
-                in-depth
-                insight into shifts in team dynamics. Lastly, we could integrate predictive analysis to help identify
-                teams
-                that likely to win future championships based on historical and current performance metrics.
-
+                better landscape to the audience. We could do this by incorporating additional data such as team
+                performance trends, player contribution, or economic impact on the cities. We can add more interactive
+                features like time-lapse to display how championship distribution has evolved over the years to provide
+                a more in-depth insight into shifts in team dynamics. Lastly, we could integrate predictive analysis to
+                help identify teams that likely to win future championships based on historical and current performance
+                metrics.
             </p>
         </div>
         <div class="chart-container">
