feat: update 3-point shooting section to enhance clarity and reflect recent trends in playoff statistics

--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -111,20 +111,22 @@
         </div>
         <div class="chart-container">
             <h2>
-                3-Point Shooting Evolution in the Playoffs
+                3-Point vs. 2-Point Shooting Evolution in the Playoffs
             </h2>
-            <embed type="text/html" src="../Static Plots Code/3 Point made history/nba_playoff_3pt_trend.png"
-                width="1000" height="800" class="card">
+            <embed type="text/html" src="../Static Plots Code/3 Point made history/nba_playoff_shooting_trend.png"
+                width="1100" height="875"
+                style="background: #fff; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); padding: 2rem; margin: 2rem; max-width: 1100px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
             <p class="card">
-                Some key observation our team found is there is a significant increase for 3 point attempts per game in
-                play-off from 2.0 in 12-13 season to 3.2 for 23-24 season. 3 point made per game is also increase by 68%
-                within the past 12 seasons. The rise of 3-point statistics showing a shift in gameplay strategies over
-                time. Player are adapting 3-point shooting as a primary score method instead of what they did in the
-                past (near basket and pull up jumpers). This has also changed the team dynamic of the transformation of
-                defensive strategies, spacing on the court, and player roles, emphasizing shooters and perimeter play.
-                Due to this transformation, the 3 point percentage is likely to be slightly higher, but the trend may be
-                remaining a stable increase because there are all kind of different defense approach has been change to
-                adapt the transformation of scoring technique.
+                Some key observation our team found is the three point attempts and makes shows an increasing trend from
+                2012-2024 with 3 point made per game increasing by 68% over the past 12 years from 0.68 to 1.14. This
+                finding shows that the team has shifted scoring strategies and is focusing more on making 3's. This is
+                an evolutionary change because effectively making 3's can help the team score more points compared to
+                the team still focusing on 2 point strategies. Conversely, 2-point attempts show a downward trend over
+                this period due to 3-point strategies. Overall, this visualization reflects the NBA's 3-point revolution
+                even in the playoff season, where players usually choose to shoot more 2 points (safer way to score).
+                Players and teams are now using strategies that prioritize 3-point shots while maintaining consistent
+                efficiency in 2-point shooting (2-point made per game has not significantly changed in the past 12
+                seasons).
             </p>
         </div>
     </main>
