refactor: update interactive page to link new performance chart and remove obsolete plot script

--- a/subpages/interactive.html
+++ b/subpages/interactive.html
@@ -72,7 +72,7 @@
             <h2>
                 Player Performance Comparison in the NBA Playoffs From the 2012-2013 Season to 2023-2024 Season
             </h2>
-            <embed type="text/html" src="../charts/plot.html" width="1000" height="700" class="card">
+            <embed type="text/html" src="../charts/nba_playoffs_performance.html" width="1000" height="700" class="card">
         </div>
         <div style="display: flex;
         flex-direction: column;
