feat: add references section with links to relevant research articles in index page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                     of what drives success in professional basketball, offering strategic insights for future decisions
                     in team building and game planning.
                 </p>
+                <ul>
+                    <h4>
+                        References:
+                    </h4>
+                    <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7241640/">Relationships between Playing Time and Selected NBA Combine Test Performance in Division I Mid-Major Basketball Players</a></li>
+                    <li><a href="https://www.researchgate.net/publication/366579989_Research_on_the_Developing_Trend_and_Strategies_of_the_NBA_Games_and_NBA_Players">Research on the Developing Trend and Strategies of the NBA Games and NBA Players</a></li>
+                    <li><a href="https://journals.lww.com/nsca-jscr/fulltext/2013/03000/performance_changes_in_nba_basketball_players_vary.8.aspx">Performance Changes in NBA Basketball Players Vary in Starters vs. Nonstarters Over a Competitive Season</a></li>
+                </ul>
             </div>
             <h2>
                 About Our Main Dataset
